# beam

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ProgressBar.tsx  ReceivePanel.tsx  SendPanel.tsx
frontend/src/lib/: api.ts  crypto.ts  utils.ts
src/: code.rs  crypto.rs  handshake.rs  main.rs  nat.rs  protocol.rs  relay.rs  transfer.rs  web.rs
web/: index.html
