[package]
name = "beam"
version = "0.2.0"
edition = "2021"
description = "Peer-to-peer file transfer with end-to-end encryption."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
spake2 = "0.4"
ml-kem = { version = "0.2", features = ["zeroize"] }
kem = "=0.3.0-pre.0"
chacha20poly1305 = "0.10"
hkdf = "0.12"
zeroize = "1.7"
indicatif = "0.17"
rand = "0.8"
rand_core = "0.6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rcgen = "0.13"
hex = "0.4"
bytes = "1"
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
